<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/exercise_toolbar_all_page"></include>
        </TableRow>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_family"

                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_lastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_name"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:clickable="false"
                            android:focusable="false"
                            android:id="@+id/et_firstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_sex"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_father_name"

                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_parentName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_code"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_nationalCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_mobile"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_date"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_birthDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_education"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_education"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_job"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_job"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="آدرس"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:hint="@string/hint_phone"
                        app:hintTextAppearance="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_phone2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>
                </TableRow>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>